<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context=".Science_quiz">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/score"
            style="@style/TitleText_Style"
            android:text="@string/science"
            android:textSize="36sp"
            app:fontFamily="@font/carter_one"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="40dp"
            android:orientation="vertical">

            <LinearLayout
               style="@style/LinearLayout_questionStyle"
                >

                <TextView
                    android:id="@+id/textView10"
                    style="@style/TextView_questionHeadingStyle"
                    android:text="@string/Question_1"/>
                <TextView
                    style="@style/TextView_questionStyle"
                    android:text="@string/sQuestion1" />

                <RadioGroup
                    android:id="@+id/radioGroup1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RadioButton
                        android:id="@+id/question1_opt1"
                        style="@style/RadioButton_Style"
                        android:text="@string/sQ1_opt1" />
                    <RadioButton
                        android:id="@+id/question1_ans"
                        style="@style/RadioButton_Style"
                        android:text="@string/sQ1_opt2" />
                    <RadioButton
                        android:id="@+id/question1_opt3"
                        style="@style/RadioButton_Style"
                        android:text="@string/sQ1_opt3" />
                    <RadioButton
                        android:id="@+id/question1_opt4"
                        style="@style/RadioButton_Style"
                        android:text="@string/sQ1_opt4" />

                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                style="@style/LinearLayout_questionStyle">

                <TextView
                    style="@style/TextView_questionHeadingStyle"
                    android:text="@string/Question_2" />
                <TextView
                    style="@style/TextView_questionStyle"
                    android:text="@string/sQuestion2"/>

                <RadioGroup
                    android:id="@+id/radioGroup2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RadioButton
                        android:id="@+id/question2_opt1"
                        style="@style/RadioButton_Style"
                        android:text="@string/sQ2_opt1" />
                    <RadioButton
                        android:id="@+id/question2_ans"
                        style="@style/RadioButton_Style"
                        android:text="@string/sQ2_opt2" />
                    <RadioButton
                        android:id="@+id/question2_opt3"
                        style="@style/RadioButton_Style"
                        android:text="@string/sQ2_opt3"/>
                    <RadioButton
                        android:id="@+id/question2_opt4"
                        style="@style/RadioButton_Style"
                        android:text="@string/sQ2_opt4"/>

                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                style="@style/LinearLayout_questionStyle">

                <TextView
                    style="@style/TextView_questionHeadingStyle"
                    android:text="@string/Question_3" />
                <TextView
                    style="@style/TextView_questionStyle"
                    android:text="@string/sQuestion3"/>

                <RadioGroup
                    android:id="@+id/radioGroup3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RadioButton
                        android:id="@+id/question3_opt1"
                        style="@style/RadioButton_Style"
                        android:text="@string/sQ3_opt1" />
                    <RadioButton
                        android:id="@+id/question3_ans"
                        style="@style/RadioButton_Style"
                        android:text="@string/sQ3_opt2"/>
                    <RadioButton
                        android:id="@+id/question3_opt3"
                        style="@style/RadioButton_Style"
                        android:text="@string/sQ3_opt3" />
                    <RadioButton
                        android:id="@+id/question3_opt4"
                        style="@style/RadioButton_Style"
                        android:text="@string/sQ3_opt4" />

                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                style="@style/LinearLayout_questionStyle">

                <TextView
                    style="@style/TextView_questionHeadingStyle"
                    android:text="@string/Question_4" />
                <TextView
                    style="@style/TextView_questionStyle"
                    android:text="@string/sQuestion4" />

                <RadioGroup
                    android:id="@+id/radioGroup4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RadioButton
                        android:id="@+id/question4_ans"
                        style="@style/RadioButton_Style"
                        android:text="@string/sQ4_opt1"/>
                    <RadioButton
                        android:id="@+id/question4_opt2"
                        style="@style/RadioButton_Style"
                        android:text="@string/sQ4_opt2" />
                    <RadioButton
                        android:id="@+id/question4_opt3"
                        style="@style/RadioButton_Style"
                        android:text="@string/sQ4_opt3"/>
                    <RadioButton
                        android:id="@+id/question4_opt4"
                        style="@style/RadioButton_Style"
                        android:text="@string/sQ4_opt4" />

                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                style="@style/LinearLayout_questionStyle">

                <TextView
                    style="@style/TextView_questionHeadingStyle"
                    android:text="@string/Question_5" />
                <TextView
                    style="@style/TextView_questionStyle"
                    android:text="@string/sQuestion5" />

                <RadioGroup
                    android:id="@+id/radioGroup5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RadioButton
                        android:id="@+id/question5_opt1"
                        style="@style/RadioButton_Style"
                        android:text="@string/sQ5_opt1"/>
                    <RadioButton
                        android:id="@+id/question5_ans"
                        style="@style/RadioButton_Style"
                        android:text="@string/sQ5_opt2" />
                    <RadioButton
                        android:id="@+id/question5_opt3"
                        style="@style/RadioButton_Style"
                        android:text="@string/sQ5_opt3"/>
                    <RadioButton
                        android:id="@+id/question5_opt4"
                        style="@style/RadioButton_Style"
                        android:text="@string/sQ5_opt4" />

                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                style="@style/LinearLayout_questionStyle" >

                <TextView
                    style="@style/TextView_questionHeadingStyle"
                    android:text="@string/Question_6" />

                <TextView
                    style="@style/TextView_questionStyle"
                    android:text="@string/sQuestion6" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:contentDescription="@string/water"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/water" />

                <EditText
                    android:id="@+id/science_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:ems="10"
                    android:hint="@string/answer"
                    android:inputType="textPersonName" />
            </LinearLayout>

            <LinearLayout
                style="@style/LinearLayout_questionStyle" >

                <TextView
                    style="@style/TextView_questionHeadingStyle"
                    android:text="@string/Question_7" />

                <TextView
                    style="@style/TextView_questionStyle"
                    android:text="@string/sQuestion7" />

                <CheckBox
                    android:id="@+id/question7_ans1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sQ7_opt1" />

                <CheckBox
                    android:id="@+id/question7_ans2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sQ7_opt2" />

                <CheckBox
                    android:id="@+id/question7_ans3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sQ7_opt3" />

                <CheckBox
                    android:id="@+id/question7_opt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sQ7_opt4" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="40dp"
                android:orientation="vertical">
                <Button
                    android:id="@+id/submit_btn"
                    style="@style/SubmitButton_style" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>