<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context=".GK_quiz">
    <TextView
        android:id="@+id/score"
        style="@style/TitleText_Style"
        android:text="@string/General_Knowledge"
        android:textColor="#2876F9"
        app:fontFamily="@font/carter_one" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="40dp"
            android:orientation="vertical">
            <LinearLayout
                style="@style/LinearLayout_questionStyle">

                <TextView
                    android:id="@+id/textView10"
                    style="@style/TextView_questionHeadingStyle"
                    android:text="@string/Question_1"/>
                <TextView
                    style="@style/TextView_questionStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/gQuestion1"
                    android:textSize="24sp" />

                <RadioGroup
                    android:id="@+id/radioGroup1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RadioButton
                        android:id="@+id/question1_opt1"
                        style="@style/RadioButton_Style"
                        android:text="@string/gQ1_opt1"/>
                    <RadioButton
                        android:id="@+id/question1_ans"
                        style="@style/RadioButton_Style"
                        android:text="@string/gQ1_opt2"/>
                    <RadioButton
                        android:id="@+id/question1_opt3"
                        style="@style/RadioButton_Style"
                        android:text="@string/gQ1_opt3"/>
                    <RadioButton
                        android:id="@+id/question1_opt4"
                        style="@style/RadioButton_Style"
                        android:text="@string/gQ1_opt4"/>

                </RadioGroup>
            </LinearLayout>

            <LinearLayout
               style="@style/LinearLayout_questionStyle">

                <TextView
                   style="@style/TextView_questionHeadingStyle"
                    android:text="@string/Question_2"/>
                <TextView
                    style="@style/TextView_questionStyle"
                    android:text="@string/gQuestion2"/>

                <RadioGroup
                    android:id="@+id/radioGroup2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RadioButton
                        android:id="@+id/question2_ans"
                        style="@style/RadioButton_Style"
                        android:text="@string/gQ2_opt1"/>
                    <RadioButton
                        android:id="@+id/question2_opt2"
                        style="@style/RadioButton_Style"
                        android:text="@string/gQ2_opt2"/>
                    <RadioButton
                        android:id="@+id/question2_opt3"
                        style="@style/RadioButton_Style"
                        android:text="@string/gQ2_opt3"/>
                    <RadioButton
                        android:id="@+id/question2_opt4"
                        style="@style/RadioButton_Style"
                        android:text="@string/gQ2_opt4"/>

                </RadioGroup>
            </LinearLayout>

            <LinearLayout
               style="@style/LinearLayout_questionStyle">

                <TextView
                    style="@style/TextView_questionHeadingStyle"
                    android:text="@string/Question_3"/>
                <TextView
                    style="@style/TextView_questionStyle"
                    android:text="@string/gQuestion3"/>

                <RadioGroup
                    android:id="@+id/radioGroup3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RadioButton
                        android:id="@+id/question3_opt1"
                        style="@style/RadioButton_Style"
                        android:text="@string/gQ3_opt1"/>
                    <RadioButton
                        android:id="@+id/question3_ans"
                        style="@style/RadioButton_Style"
                        android:text="@string/gQ3_opt2"/>
                    <RadioButton
                        android:id="@+id/question3_opt3"
                        style="@style/RadioButton_Style"
                        android:text="@string/gQ3_opt3"/>
                    <RadioButton
                        android:id="@+id/question3_opt4"
                        style="@style/RadioButton_Style"
                        android:text="@string/gQ3_opt4" />

                </RadioGroup>
            </LinearLayout>

            <LinearLayout
               style="@style/LinearLayout_questionStyle">
                <TextView
                    style="@style/TextView_questionHeadingStyle"
                    android:text="@string/Question_4"/>
                <TextView
                    style="@style/TextView_questionStyle"
                    android:text="@string/gQuestion4" />

                <RadioGroup
                    android:id="@+id/radioGroup4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RadioButton
                        android:id="@+id/question4_opt1"
                        style="@style/RadioButton_Style"
                        android:text="@string/gQ4_opt1"/>
                    <RadioButton
                        android:id="@+id/question4_opt2"
                        style="@style/RadioButton_Style"
                        android:text="@string/gQ4_opt2"/>
                    <RadioButton
                        android:id="@+id/question4_ans"
                        style="@style/RadioButton_Style"
                        android:text="@string/gQ4_opt3" />
                    <RadioButton
                        android:id="@+id/question4_opt4"
                        style="@style/RadioButton_Style"
                        android:text="@string/gQ4_opt4" />

                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                style="@style/LinearLayout_questionStyle">
                <TextView
                    style="@style/TextView_questionHeadingStyle"
                    android:text="@string/Question_5"/>
                <TextView
                    style="@style/TextView_questionStyle"
                    android:text="@string/gQuestion5" />

                <RadioGroup
                    android:id="@+id/radioGroup5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RadioButton
                        android:id="@+id/question5_opt1"
                        style="@style/RadioButton_Style"
                        android:text="@string/gQ5_opt1"/>
                    <RadioButton
                        android:id="@+id/question5_opt2"
                        style="@style/RadioButton_Style"
                        android:text="@string/gQ5_opt2"/>
                    <RadioButton
                        android:id="@+id/question5_ans"
                        style="@style/RadioButton_Style"
                        android:text="@string/gQ5_opt3" />
                    <RadioButton
                        android:id="@+id/question5_opt4"
                        style="@style/RadioButton_Style"
                        android:text="@string/gQ5_opt4" />

                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="40dp"
                android:orientation="vertical">
                <Button
                    android:id="@+id/submit_btn"
                    style="@style/SubmitButton_style"
                    android:text="@string/submit"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>